external-crates/move/crates/move-compiler/tests/move_2024/typing/signed_int_feature_gated.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E13001]: feature is not supported in specified edition
  ┌─ tests/move_2024/typing/signed_int_feature_gated.move:4:17
  │
4 │         let _x: i8 = 0;
  │                 ^^ Signed integer types are under development and should not be used right now.
  │
  = You can update the edition in the 'Move.toml', or via command line flag if invoking the compiler directly.

error[E13001]: feature is not supported in specified edition
  ┌─ tests/move_2024/typing/signed_int_feature_gated.move:8:18
  │
8 │         let _x = -1;
  │                  ^ Signed integer types are under development and should not be used right now.
  │
  = You can update the edition in the 'Move.toml', or via command line flag if invoking the compiler directly.

warning[W04039]: unable to determine principal type for literal
  ┌─ tests/move_2024/typing/signed_int_feature_gated.move:8:19
  │
8 │         let _x = -1;
  │                   ^ Could not determine a concrete type for this signed numeric literal, so defaulting to 'i64'
  │
  = To avoid this warning, add an explicit type annotation, e.g., '<num>i64'
  = This warning can be suppressed with '#[allow(untyped_literal)]' applied to the 'module' or module member ('const', 'fun', or 'struct')
